--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
                     />
                 </div>
                 <div class="bottom-buttons">
-                    <a href="https://github.com/zxcodes/JavaScript-Calculator"
+                    <a href="https://github.com/kidtzz/Fe-Calculator-js"
                         ><i class="fab fa-github"></i> Source</a
                     >
                     <button onclick="changeTheme()" id="dark-mode">
-                        Light Mode ☀️
+                        Light Mode
                     </button>
                 </div>
             </div>
